--- a/VPZAngularDemo1/controller.html
+++ b/VPZAngularDemo1/controller.html
@@ -3,8 +3,9 @@
 <head>
     <title></title>
 	<meta charset="utf-8" />
-    <script src="Script/angular.js"></script>
-    <script src="Script/Script.js"></script>
+    <!--<script src="Script/angular.min.js"></script>-->
+    <script src="Script/angular.js"></script>  <!--using uncompressed library of angluar is provide error in browser development tool-->
+    <script src="Script/Controller.js"></script>
 </head>
 <body>
     <div ng-controller="myController">
