--- a/VPZAngularDemo1/ng-src directive.html
+++ b/VPZAngularDemo1/ng-src directive.html
@@ -2,22 +2,29 @@
 <html ng-app="myModule">
 <head>
     <title></title>
-    <script src="Script/angular.js"></script>
+        <script src="Script/angular.js"></script>
     <script src="Script/ng-src-directive.js"></script>
 	<meta charset="utf-8" />
 </head>
 <body>
     <div ng-controller="myController">
-        <div>
-           Name :- {{country.name}}
-        </div>
-        <div>
-            Capital :- {{country.capital}}
-        </div>
-        <div>
-            <img src="{{country.flag}}" alt="{{country.name + 'Flag'}}"  style="height:150px; width:250px;" />
-        </div>
+        <!--Step:1-->
         <!--<img src="Image/JaiHo.jpg" style="height:150px; width:250px;" />-->
+
+            <div>
+               Name :- {{country.name}}
+            </div>
+            <div>
+                Capital :- {{country.capital}}
+            </div>
+            <!--Step :-2-->
+            <!--<div>
+                <img src="{{country.flag}}" alt="{{country.name + 'Flag'}}"  style="height:150px; width:250px;" />
+            </div>-->
+           <!--Step :-3-->
+            <div>
+                <img ng-src="{{country.flag}}" alt="{{country.name + 'Flag'}}" style="height:150px; width:250px;" />
+            </div>
     </div>
 </body>
 </html>
